--- a/package.json
+++ b/package.json
@@ -1,4 +1,23 @@
 {
+  "name": "charless-business",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx @tailwindcss/cli -i ./CSS/input.css -o ./CSS/output.css --watch"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ZEU4S-Dragon/Charles-Best-version.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ZEU4S-Dragon/Charles-Best-version/issues"
+  },
+  "homepage": "https://github.com/ZEU4S-Dragon/Charles-Best-version#readme",
+  "description": "",
   "dependencies": {
     "@tailwindcss/cli": "^4.1.11",
     "tailwindcss": "^4.1.11"
